--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,17 +1,20 @@
 .header{
   position: relative;
   font-family: $font-title;
-  padding: 10px;
+  padding: 20px;
   box-shadow: grey 0 0 10px;
+  z-index: 5;
   h1 {
+    font-size: 75px;
     text-align: center;
     margin: 0;
+    font-weight: lighter;
   }
   i{
     position: absolute;
     top: 50%;
-    left: 25px;
-    font-size: 20px;
+    left: 50px;
+    font-size: 50px;
     transform: translateY(-50%);
 
   }
