--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -9,12 +9,12 @@ $color-footer : #414141;
 $font-content : 'Roboto', sans-serif;
 $font-title :'Shrikhand', cursive;
 // BOX SHADOW
-$box-shad-button : #a6a6a6 0 3px 10px;
+$box-shad-button : #a6a6a6 0 10px 20px;
 $box-shad-button-hover :  #a6a6a6 0 3px 2px;
-$box-shad-content : #dadada 0 5px 10px;
+$box-shad-content : #cbcbcb 0 8px 30px;
 // SHADE-IN ANIMATION NUMBER OF CARD
 $num-cards : 10;
 // LOADING BAR
-$loading-time : random(3) + s;
+$loading-time : 2s;
 $num-loading : 6;
 $loading-colors: $color-primary,$color-primary,$color-secondary,$color-primary $color-secondary, $color-tertiary;
