--- a/sass/components/_functioning.scss
+++ b/sass/components/_functioning.scss
@@ -3,25 +3,26 @@
   &__card {
     position: relative;
     background-color: $color-bg;
-    padding: 25px 30px;
-    margin: 10px 0 20px 10px;
+    padding: 70px 50px 70px 100px;
+    margin: 50px 0 50px 50px;
     box-shadow: $box-shad-content;
-    border-radius: 20px;
+    border-radius: 60px;
+    font-size: 35px;
     i {
       color: grey;
-      font-size: 18px;
-      margin-right: 20px;
+      margin-right: 60px;
+      font-size: 40px;
     }
     &__index {
       position: absolute;
       background-color: $color-primary;
       color: white;
-      padding: 3px 8px;
-      border-radius: 25px;
-      left: -13px;
+      padding: 11px 22px;
+      border-radius: 50%;
+      left: -25px;
       top: 50%;
       transform: translateY(-50%);
-      font-size: 15px;
+      font-size: 40px;
     }
     &--active {
       background-color: lighten($color-primary,35%);
