--- a/sass/components/_restaurant.scss
+++ b/sass/components/_restaurant.scss
@@ -3,14 +3,14 @@
 
   &__card {
     position: relative;
-    margin: 20px 0;
+    margin: 10px 0 50px 0;
     box-shadow: $box-shad-content;
-    border-radius: 15px;
-
+    border-radius: 35px;
     &__img { /*Temporary*/
-      height: 200px;
-      background-color: grey;
-      border-radius: 15px 15px 0 0;
+      height: 450px;
+      width: 100%;
+      object-fit: cover;
+      border-radius: 35px 35px 0 0;
     }
 
     &__info {
@@ -18,33 +18,38 @@
       align-items: center;
       justify-content: space-between;
       background-color: white;
-      border-radius: 0 0 15px 15px;
-      padding: 20px;
-
+      border-radius: 0 0 35px 35px;
+      padding: 35px;
+      margin-top: -5px;
+      h4 {
+        margin: 0;
+        font-size: 45px;
+      }
       p {
         margin: 0;
-        font-size: 18px;
-
-        &:nth-child(2) {
-          font-weight: 300;
-          font-size: 16px;
-        }
+        margin-top: 10px;
+        font-weight: 300;
+        font-size: 40px;
       }
+
 
     }
     &--new {
       &::before {
         position: absolute;
         content: "Nouveau";
-        right: 20px;
-        top: 20px;
-        font-size: 12px;
-        padding: 5px 10px;
-        border-radius: 2px;
+        right: 30px;
+        top: 30px;
+        font-size: 30px;
+        padding: 15px 25px;
+        border-radius: 5px;
         color: darken($color-tertiary, 40%);
         background-color: $color-tertiary;
 
       }
     }
+
   }
+
 }
+
