--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,22 +16,22 @@ a {
   color: inherit;
 }
 h3 {
-  font-size: 25px;
-  font-weight: 600;
+  font-size: 65px;
 }
 
 .content--padding {
-  padding: 20px 20px 50px;
+  padding: 30px 50px 100px;
   &--soft {
-    padding: 20px 20px 10px 20px;
+    padding: 30px 50px ;
   }
 }
 
 // heart animation hover
 .fa-heart {
   position: relative;
-  font-size: 25px;
+  font-size: 55px;
   transition: color .2s;
+  margin-right: 20px;
   &.fa-solid{
     position: absolute;
     inset: 0;
@@ -52,30 +52,29 @@ h3 {
 
 // Location
 .location {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   background: #e5e5e5;
-
+  font-size: 40px;
   p {
-    margin-left: 20px;
+    margin-left: 40px;
   }
 }
 
 // Description
 .description {
   background-color: $color-bg;
-  padding: 50px;
+  padding: 100px;
   text-align: center;
-
   h2 {
     margin: 0;
-    font-size: 30px;
+    font-size: 65px;
   }
-
   p {
     font-weight: 300;
-    font-size: 20px;
+    font-size: 45px;
   }
 }
 
@@ -86,24 +85,26 @@ h3 {
   padding-bottom: 60px;
 }
 .presentation__img {
-  height: 300px;
-  background-color: #b2b2b2;
+  position: relative;
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+  z-index: -1;
 }
 .detail__title {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 45px 0 20px;
+  padding: 50px 55px 20px 55px ;
   margin-top: -50px;
-  border-radius: 50px 50px 0 0 ;
+  border-radius: 50% 50% 0 0 ;
+  z-index: 1;
   h2{
     font-family: $font-title;
     font-weight: lighter;
-    font-size: 27px;
-    margin-bottom: 10px;
-  }
-  i {
-  font-size: 25px;
+    font-size: 65px;
+    margin: 0;
   }
 }
 
