--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,19 +1,22 @@
 .btn {
   display: block;
-  background : linear-gradient(to top left, $color-primary , $color-secondary);
+  background: linear-gradient(to top left, $color-primary, $color-secondary);
   color: white;
   border: none;
   border-radius: 100px;
-  padding: 40px 0;
+  padding: 40px 20px;
   margin: 10px auto;
-  width: 550px;
-  font-size: 40px;
+  max-width: 440px;
+  font-size: 30px;
   box-shadow: $box-shad-button;
-  transition: all .2s;
+  transition: all 0.2s;
   cursor: pointer;
   &:hover {
-    background: linear-gradient(to top left, lighten($color-primary, 8%) , lighten($color-secondary, 8%));
+    background: linear-gradient(
+      to top left,
+      lighten($color-primary, 8%),
+      lighten($color-secondary, 8%)
+    );
     box-shadow: $box-shad-button-hover;
   }
 }
-
